k8s/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: workout

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: workout
  namespace: workout
spec:
  replicas: 1
  selector:
    matchLabels:
      app: workout
  template:
    metadata:
      labels:
        app: workout
    spec:
      containers:
        - name: workout
          image: ghcr.io/pablo-george/workout.pablogeorge.org:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: data
              mountPath: /app/data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: workout-data

---
apiVersion: v1
kind: Service
metadata:
  name: workout
  namespace: workout
spec:
  selector:
    app: workout
  ports:
    - port: 8080
      targetPort: 8080
