k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: workout
  namespace: workout
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik
  rules:
    - host: workout.pablogeorge.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: workout
                port:
                  number: 8080
  tls:
    - hosts:
        - workout.pablogeorge.org
      secretName: workout-pablogeorge-org-tls
